--- a/source/less/blocks/customer.less
+++ b/source/less/blocks/customer.less
@@ -185,3 +185,32 @@
     padding-left: 106px;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .customer {
+    width: 592px;
+    margin-top: 25px;
+    padding: 38px 1px 1px 45px;
+  }
+
+  .customer__title {
+    margin-left: 36px;
+  }
+
+  .customer__name {
+    display: block;
+    height: 44px;
+    margin-top: 17px;
+    margin-left: 1px;
+    padding-left: 36px;
+  }
+
+  .customer__name-holder {
+    width: 350px;
+  }
+
+  .customer__surname-holder,
+  .customer__patronymic-holder {
+    width: 310px;
+  }
+}
