--- a/source/less/blocks/form-head.less
+++ b/source/less/blocks/form-head.less
@@ -109,4 +109,9 @@
     background-repeat: no-repeat;
     background-image: url("../img/bg-intro-triangle-desktop.svg");
   }
+
+  .form-head__title {
+    font-size: 30px;
+    margin: 112px auto 31px;
+  }
 }
