--- a/source/less/style.less
+++ b/source/less/style.less
@@ -41,3 +41,4 @@
 @import "blocks/button-module1.less";
 @import "blocks/button-module2.less";
 @import "blocks/form-content.less";
+@import "blocks/send-toggle.less";
