--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2609,8 +2609,7 @@ footer {
   .form-head__text {
     width: 440px;
     margin: 10px auto;
-    margin-bottom: 35
-    px;
+    margin-bottom: 35px;
   }
 }
 @media (min-width: 1200px) {
@@ -2633,6 +2632,10 @@ footer {
     height: 57px;
     background-repeat: no-repeat;
     background-image: url("../img/bg-intro-triangle-desktop.svg");
+  }
+  .form-head__title {
+    font-size: 30px;
+    margin: 112px auto 31px;
   }
 }
 .form-section {
@@ -2809,14 +2812,31 @@ footer {
   }
   .customer__label {
     margin: 0;
-    margin-top: 0px;
     padding-left: 106px;
   }
-  .customer--circle::before {
-    content: "";
-    position: absolute;
-    top: -13px;
-    left: 33px;
+}
+@media (min-width: 1200px) {
+  .customer {
+    width: 592px;
+    margin-top: 25px;
+    padding: 38px 1px 1px 45px;
+  }
+  .customer__title {
+    margin-left: 36px;
+  }
+  .customer__name {
+    display: block;
+    height: 44px;
+    margin-top: 17px;
+    margin-left: 1px;
+    padding-left: 36px;
+  }
+  .customer__name-holder {
+    width: 350px;
+  }
+  .customer__surname-holder,
+  .customer__patronymic-holder {
+    width: 310px;
   }
 }
 .contacts {
@@ -3055,6 +3075,100 @@ footer {
     height: 1px;
   }
 }
+@media (min-width: 1200px) {
+  .contacts__wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 44px 1px 1px 40px;
+  }
+  .contacts {
+    width: auto;
+  }
+  .contacts__title {
+    margin-left: 400px;
+    text-align: left;
+  }
+  .contacts__tel-input {
+    width: 260px;
+    margin-top: 9px;
+    margin-left: 8px;
+  }
+  .contacts--borders::before {
+    content: "";
+    position: absolute;
+    top: 11px;
+    left: 120px;
+    width: 274px;
+    height: 1px;
+  }
+  .contacts--borders::after {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 11px;
+    left: 800px;
+    width: 274px;
+    height: 1px;
+  }
+  br {
+    display: none;
+  }
+  .contacts__tel1 {
+    display: none;
+  }
+  .contacts__tel-text {
+    display: inline-block;
+    width: 72px;
+    height: 25px;
+    padding-top: 10px;
+  }
+  .contacts__email-text {
+    display: inline-block;
+    width: 151px;
+    height: 20px;
+    padding-top: 10px;
+  }
+  .contacts__email-input {
+    width: 260px;
+    margin-top: 9px;
+    margin-left: 8px;
+  }
+  .contacts--tube::before {
+    content: "";
+    position: absolute;
+    top: -6px;
+    left: 343px;
+  }
+  .contacts--tube::after {
+    content: "";
+    position: absolute;
+    top: 14px;
+    left: 363px;
+  }
+  .contacts__email {
+    margin-top: 1px;
+    margin-left: 113px;
+  }
+  .contacts--envelope::before {
+    content: "";
+    position: absolute;
+    top: -7px;
+    left: 423px;
+  }
+  .contacts--envelope::after {
+    content: "";
+    position: absolute;
+    top: 14px;
+    left: 443px;
+  }
+}
 .radio {
   position: relative;
   margin-top: 13px;
@@ -3141,7 +3255,6 @@ footer {
   }
   .radio__label {
     margin: 0;
-    margin-top: 0px;
     padding-left: 106px;
   }
   .radio--circle::before {
@@ -3172,6 +3285,23 @@ footer {
     width: 1px;
     height: 292px;
     background-color: rgba(1, 1, 1, 0.1);
+  }
+}
+@media (min-width: 1200px) {
+  .radio {
+    width: 592px;
+    margin-top: 25px;
+    padding: 38px 1px 4px 90px;
+  }
+  .radio__title {
+    margin-left: 107px;
+  }
+  .radio--borders::before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 6px;
+    left: 599px;
   }
 }
 .checkbox {
@@ -3243,6 +3373,9 @@ footer {
   background-image: url("../img/icon-tick.svg");
 }
 @media (min-width: 768px) {
+  .checkbox {
+    margin-top: 53px;
+  }
   .checkbox__wrap-wrap {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -3253,14 +3386,15 @@ footer {
             flex-direction: row;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     width: 764px;
-    margin-top: 53px;
-    padding: 20px 15px 28px 15px;
+    padding: 25px 1px 20px 135px;
   }
   .checkbox__title {
     width: 280px;
-    margin: 0;
-    margin-left: 36px;
+    padding-right: 52px;
     font-size: 21px;
     text-align: center;
   }
@@ -3281,10 +3415,12 @@ footer {
     left: 581px;
     width: 125px;
     height: 1px;
+    background-color: rgba(1, 1, 1, 0.1);
   }
   .checkbox__wrap {
-    display: inline-block;
-    width: 220px;
+    display: block;
+    width: 257px;
+    height: 86px;
     margin: 0;
   }
   .checkbox__input {
@@ -3339,29 +3475,82 @@ footer {
   z-index: 5;
   width: 279px;
   height: 160px;
-  background-color: rgba(1, 1, 1, 0.05);
+  background-color: rgba(1, 1, 1, 0.1);
 }
 @media (min-width: 768px) {
   .discription {
+    position: relative;
     width: 764px;
+    padding: 42px 55px 20px 52px;
+  }
+  .discription__title {
+    width: 255px;
+    font-size: 21px;
+    text-align: center;
   }
   .discription--borders::before {
     content: "";
     position: absolute;
     display: block;
-    top: 26px;
+    top: 13px;
     left: 60px;
     width: 125px;
     height: 1px;
+    background-color: rgba(1, 1, 1, 0.1);
   }
   .discription--borders::after {
     content: "";
     position: absolute;
     display: block;
-    top: 26px;
+    top: 13px;
     left: 581px;
     width: 125px;
     height: 1px;
+    background-color: rgba(1, 1, 1, 0.1);
+  }
+  .discription__text {
+    position: relative;
+    width: 250px;
+    padding: 30px 15px 20px 25px;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 35px;
+    text-align: left;
+    text-transform: none;
+    color: #000000;
+  }
+  .dispription__label {
+    position: relative;
+    color: #000000;
+  }
+  .discription--quadrate::before {
+    content: "";
+    position: absolute;
+    top: -145px;
+    left: -20px;
+    display: block;
+    z-index: 5;
+    width: 648px;
+    height: 160px;
+    background-color: rgba(1, 1, 1, 0.05);
+  }
+  .discription--quadrate::after {
+    content: "* - обязательные поля";
+    position: absolute;
+    top: 85px;
+    left: 470px;
+    display: block;
+    z-index: 5;
+    width: 400px;
+    height: 20px;
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #333333;
+  }
+  .discription__comment {
+    width: 606px;
+    height: 120px;
   }
 }
 .map {
@@ -3458,6 +3647,7 @@ footer {
   margin-right: auto;
   margin-top: 48px;
   margin-bottom: 43px;
+  padding-right: 21px;
   font-size: 21px;
   font-weight: 700;
   line-height: 58px;
@@ -3468,14 +3658,15 @@ footer {
   background-color: #81b3d2;
 }
 @media (min-width: 768px) {
-  .button__form {
+  .button-form {
     width: 324px;
     height: 58px;
+    margin: 28px 1px 60px 1px;
     font-size: 21px;
   }
 }
 @media (min-width: 1200px) {
-  .button__form {
+  .button-form {
     width: 480px;
     height: 58px;
     font-size: 21px;
@@ -4179,6 +4370,11 @@ footer {
     -webkit-box-ordinal-group: 7;
         -ms-flex-order: 6;
             order: 6;
+  }
+}
+@media (min-width: 768px) {
+  .send-toggle {
+    margin-left: 58px;
   }
 }
 
