--- a/source/less/blocks/button-form.less
+++ b/source/less/blocks/button-form.less
@@ -6,6 +6,7 @@
   margin-right: auto;
   margin-top: 48px;
   margin-bottom: 43px;
+  padding-right: 21px;
   font-size: @large-font;
   font-weight: 700;
   line-height: 58px;
@@ -17,15 +18,16 @@
 }
 
 @media (min-width: @tablet-width) {
-  .button__form {
+  .button-form {
     width: 324px;
     height: 58px;
+    margin: 28px 1px 60px 1px;
     font-size: @large-font;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .button__form {
+  .button-form {
     width: 480px;
     height: 58px;
     font-size: @large-font;
