Проект правка 7 от 15.05.2020

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -3168,6 +3168,10 @@ footer {
     top: 14px;
     left: 443px;
   }
+  .contacts__tel,
+  .contacts__email {
+    height: 65px;
+  }
 }
 .radio {
   position: relative;
@@ -3436,6 +3440,133 @@ footer {
     margin: 0;
   }
 }
+@media (min-width: 1200px) {
+  .checkbox {
+    width: auto;
+    padding-left: 1px;
+    padding-right: 1px;
+    margin-top: 53px;
+  }
+  .checkbox__title {
+    padding-left: 44px;
+    text-align: center;
+  }
+  .checkbox--borders::before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 24px;
+    left: 120px;
+    width: 274px;
+    height: 1px;
+  }
+  .checkbox--borders::after {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 24px;
+    left: 800px;
+    width: 274px;
+    height: 1px;
+    background-color: rgba(1, 1, 1, 0.1);
+  }
+  .checkbox__wrap-wrap {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    width: 1198px;
+    padding: 25px 1px 20px 125px;
+  }
+  .checkbox__wrap {
+    display: block;
+    width: 235.5px;
+    height: 86px;
+    margin: 0;
+  }
+  .checkbox__input {
+    display: block;
+    width: auto;
+    margin-bottom: 21px;
+  }
+  .checkbox__label {
+    position: relative;
+    display: block;
+    width: 123px;
+    margin: 0;
+    padding: 0;
+  }
+  .checkbox__label1 {
+    position: relative;
+    display: inline-block;
+    width: auto;
+    margin: 0;
+    padding: 0;
+    padding-left: 74px;
+  }
+  .checkbox__label2 {
+    position: relative;
+    display: inline-block;
+    width: auto;
+    margin: 0;
+    padding-left: 97px;
+  }
+  .checkbox__label3 {
+    position: relative;
+    display: inline-block;
+    width: auto;
+    margin: 0;
+    padding-left: 120px;
+  }
+  .checkbox__label4 {
+    position: relative;
+    display: inline-block;
+    width: 240px;
+    margin: 0;
+    padding-left: 118px;
+  }
+  .checkbox--quadrate2::before {
+    content: "";
+    position: absolute;
+    top: -13px;
+    left: 15px;
+    display: block;
+    z-index: 10;
+    width: 56px;
+    height: 56px;
+    background-color: #f2f2f2;
+    border-radius: 4px;
+  }
+  .checkbox__input:checked + .checkbox--quadrate2::after {
+    content: "";
+    position: absolute;
+    top: 6px;
+    left: 32px;
+  }
+  .checkbox--quadrate3::before {
+    content: "";
+    position: absolute;
+    top: -13px;
+    left: 37px;
+  }
+  .checkbox__input:checked + .checkbox--quadrate3::after {
+    content: "";
+    position: absolute;
+    top: 6px;
+    left: 57px;
+  }
+  .checkbox--quadrate4::before {
+    content: "";
+    position: absolute;
+    top: -13px;
+    left: 37px;
+  }
+  .checkbox__input:checked + .checkbox--quadrate4::after {
+    content: "";
+    position: absolute;
+    top: 6px;
+    left: 57px;
+  }
+}
 .discription {
   margin-top: 5px;
   font-weight: 700;
@@ -3535,7 +3666,7 @@ footer {
     background-color: rgba(1, 1, 1, 0.05);
   }
   .discription--quadrate::after {
-    content: "* - обязательные поля";
+    content: "* — обязательные поля";
     position: absolute;
     top: 85px;
     left: 470px;
@@ -3551,6 +3682,57 @@ footer {
   .discription__comment {
     width: 606px;
     height: 120px;
+  }
+}
+@media (min-width: 1200px) {
+  .discription {
+    position: relative;
+    width: 1196px;
+    margin-top: 0;
+    padding: 42px 55px 20px 112px;
+  }
+  .discription__title {
+    width: 255px;
+    margin-left: 1px;
+    text-align: center;
+  }
+  .discription--borders::before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 12px;
+    left: 120px;
+    width: 274px;
+    height: 1px;
+  }
+  .discription--borders::after {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 12px;
+    left: 800px;
+    width: 274px;
+    height: 1px;
+    background-color: rgba(1, 1, 1, 0.1);
+  }
+  .discription--quadrate::before {
+    content: "";
+    position: absolute;
+    width: 960px;
+  }
+  .discription--quadrate::after {
+    content: "* - обязательные поля";
+    position: absolute;
+    top: 85px;
+    left: 783px;
+  }
+  .discription__comment {
+    width: 906px;
+    height: 120px;
+  }
+  .discription__text {
+    position: relative;
+    width: 900px;
   }
 }
 .map {
@@ -3669,6 +3851,8 @@ footer {
   .button-form {
     width: 480px;
     height: 58px;
+    margin-top: 30px;
+    margin-bottom: 68px;
     font-size: 21px;
   }
 }
@@ -4375,6 +4559,11 @@ footer {
 @media (min-width: 768px) {
   .send-toggle {
     margin-left: 58px;
+  }
+}
+@media (min-width: 1200px) {
+  .send-toggle {
+    margin-left: 120px;
   }
 }
 
