--- a/source/less/blocks/button-form.less
+++ b/source/less/blocks/button-form.less
@@ -30,6 +30,8 @@
   .button-form {
     width: 480px;
     height: 58px;
+    margin-top: 30px;
+    margin-bottom: 68px;
     font-size: @large-font;
   }
 }
