--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -44,7 +44,7 @@
 .advantages__souvenires {
   display: block;
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   padding: 0;
   width: 210px;
   text-align: left;
@@ -62,25 +62,7 @@
   color: #333333;
 }
 
-.advantages__description1-text1 {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-}
-
-.advantages__description1-text2 {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-}
-
-.advantages__description1-text3 {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-}
-
-.advantages__description1-text4 {
+.advantages__description1-text {
   display: inline-block;
   margin: 0;
   padding: 0;
@@ -193,18 +175,11 @@
     display: none;
   }
 
-  .advantages__description1-text2 {
+  .advantages__description1-text {
     display: inline-block;
     margin: 0;
-    margin-left: 28px;
     padding: 0;
-  }
-
-  .advantages__description1-text4 {
-    display: inline-block;
-    margin: 0;
-    margin-left: 27px;
-    padding: 0;
+    text-align: center;
   }
 
   .advantages__home--home::after {
@@ -259,27 +234,9 @@
     padding: 0;
   }
 
-  .advantages__description1-text1 {
+  .advantages__description1-text {
     display: block;
     text-align: center;
-    margin: 0;
-    padding: 0;
-  }
-
-  .advantages__description1-text2 {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-  }
-
-  .advantages__description1-text3 {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-  }
-
-  .advantages__description1-text4 {
-    display: inline-block;
     margin: 0;
     padding: 0;
   }
