--- a/source/less/blocks/question.less
+++ b/source/less/blocks/question.less
@@ -75,13 +75,6 @@
   padding: 0;
 }
 
-.question__search {
-  display: block;
-  margin: 0;
-  padding: 0;
-}
-
-
 @media (min-width: @tablet-width) {
   .question {
     position: relative;
@@ -141,19 +134,15 @@
     padding: 0;
   }
 
-  .button {
+  .question__search {
     width: 458px;
     height: 58px;
     margin: 0;
+    padding: 0;
     font-size: @large-font;
   }
 
-  .question__search {
-    margin: 0;
-    padding: 0;
-  }
-
-  .button a {
+  .question__search a {
     margin: 0;
     padding: 0;
   }
@@ -212,11 +201,6 @@
 
   .question__search {
     display: block;
-    margin: 0;
-    padding: 0;
-  }
-
-  .button a {
     margin: 0;
     padding: 0;
   }
