--- a/source/less/blocks/checkbox.less
+++ b/source/less/blocks/checkbox.less
@@ -59,6 +59,33 @@
   border-radius: 4px;
 }
 
+.checkbox--quadrate:hover::before {
+  content: "";
+  position: absolute;
+  top: -13px;
+  left: -7px;
+  display: block;
+  z-index: 10;
+  width: 56px;
+  height: 56px;
+  background-color: #e5e5e5;
+  border-radius: 4px;
+}
+
+.checkbox--quadrate:focus::before,
+.checkbox--quadrate:active::before {
+  content: "";
+  position: absolute;
+  top: -13px;
+  left: -7px;
+  display: block;
+  z-index: 10;
+  width: 56px;
+  height: 56px;
+  background-color: #d5d5d5;
+  border-radius: 4px;
+}
+
 /* когда у нашего инпута состояние чект, то есть стоит галочка,
 то у нас должна быть картинка с галочкой */
 
@@ -74,6 +101,22 @@
   height: 52px;
   background-repeat: no-repeat;
   background-image: url("../img/icon-tick.svg");
+}
+
+.checkbox__input:checked + .checkbox--quadrat:focus::after,
+.checkbox__input:checked + .checkbox--quadrat:active::after {
+  content: "";
+  position: absolute;
+  top: 6px;
+  left: 8px;
+  z-index: 10;
+
+  display: block;
+  width: 52px;
+  height: 52px;
+  background-repeat: no-repeat;
+  background-image: url("../img/icon-tickop03.svg");
+  opacity: 0.3;
 }
 
 @media (min-width: @tablet-width) {
