--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -18,31 +18,41 @@
   box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.3);
 }
 
-.site-list__item:hover {
-  background-color: @dark-blue;
-}
-
-.site-list__item:active,
-.site-list__item:focus {
-  background-color: @very-dark-blue;
-}
-
-.site-list__item:active a,
-.site-list__item:focus a {
-  color: rgba(255, 255, 255, 0.3);
-}
-
-.site-list__item-top {
-  position: relative;
-  text-align: right;
-}
-
 .site-list__item a {
   font-size: @medium-font;
   text-transform: uppercase;
   color: #ffffff;
   text-decoration: none;
   text-align: center;
+}
+
+.site-list__item1:hover {
+  background-color: @dark-blue;
+}
+
+.site-list__item2:hover {
+  background-color: @dark-blue;
+}
+
+.site-list__item3:hover {
+  background-color: @dark-blue;
+}
+
+.site-list__item4:hover {
+  background-color: @dark-blue;
+}
+
+.site-list__item--active {
+  background-color: @very-dark-blue;
+}
+
+.site-list__item--active a {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.site-list__item-top {
+  position: relative;
+  text-align: right;
 }
 
 .site-list__item-top a {
@@ -68,20 +78,40 @@
     color: #000000;
   }
 
-  .site-list__item a:hover {
-    color: @blue;
+  .site-list__item1:hover {
+    background-color: #ffffff;
   }
 
-  .site-list__item a:active {
-    color: @brown;
+  .site-list__item2:hover {
+    background-color: #ffffff;
   }
 
-  .site-list__item a:focus {
-    color: rgba(0, 0, 0, 0.3);
+  .site-list__item3:hover {
+    background-color: #ffffff;
+  }
+
+  .site-list__item4:hover {
+    background-color: #ffffff;
+  }
+
+  .site-list__item:hover a {
+    color: #81b3d2;
   }
 
   .site-list__item-down {
     width: 156px;
+  }
+
+  .site-list__item--active a {
+    color: rgba(0, 0, 0, 0.3);
+  }
+
+  .site-list__item:active a {
+    color: #776357;
+  }
+
+  .site-list__item--active:active a {
+    color: rgba(118, 99, 87, 0.3);
   }
 
   .site-list__item5 {
