--- a/source/less/blocks/checkbox.less
+++ b/source/less/blocks/checkbox.less
@@ -103,8 +103,8 @@
   background-image: url("../img/icon-tick.svg");
 }
 
-.checkbox__input:checked + .checkbox--quadrat:focus::after,
-.checkbox__input:checked + .checkbox--quadrat:active::after {
+.checkbox__input:checked + .checkbox--quadrate:focus::after,
+.checkbox__input:checked + .checkbox--quadrate:active::after {
   content: "";
   position: absolute;
   top: 6px;
