--- a/source/less/blocks/customer.less
+++ b/source/less/blocks/customer.less
@@ -56,6 +56,17 @@
   border: none;
 }
 
+.customer__name-holder:hover {
+  background-color: #e5e5e5;
+}
+
+.customer__name-holder:active,
+.customer__name-holder:focus {
+  background-color: #ffffff;
+  outline: 4px solid #e5e5e5;
+  outline-offset: -4px;
+}
+
 .customer__surname {
   width: auto;
   height: 58px;
@@ -95,6 +106,17 @@
   border: none;
 }
 
+.customer__surname-holder:hover {
+  background-color: #e5e5e5;
+}
+
+.customer__surname-holder:active,
+.customer__surname-holder:focus {
+  background-color: #ffffff;
+  outline: 4px solid #e5e5e5;
+  outline-offset: -4px;
+}
+
 .customer__patronymic {
   width: auto;
   height: 58px;
@@ -131,6 +153,17 @@
 
   background-color: @gray;
   border: none;
+}
+
+.customer__patronymic-holder:hover {
+  background-color: #e5e5e5;
+}
+
+.customer__patronymic-holder:active,
+.customer__patronymic-holder:focus {
+  background-color: #ffffff;
+  outline: 4px solid #e5e5e5;
+  outline-offset: -4px;
 }
 
 @media (min-width: @tablet-width) {
