--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -92,7 +92,8 @@
 .contacts__tel-input {
   width: 222px;
   height: 58px;
-  margin-top: 6px;
+  margin-top: 4px;
+  margin-bottom: 2px;
   padding-left: 23px;
   font-size: 18px;
   font-weight: 700;
@@ -102,6 +103,18 @@
   background-color: @gray;
   border: none;
 }
+
+.contacts__tel-input:hover {
+  background-color: #e5e5e5;
+}
+
+.contacts__tel-input:active,
+.contacts__tel-input:focus {
+  background-color: #ffffff;
+  outline: 4px solid #e5e5e5;
+  outline-offset: -4px;
+}
+
 
 .contacts__email {
   display: inline-block;
@@ -155,7 +168,8 @@
 .contacts__email-input {
   width: 222px;
   height: 58px;
-  margin-top: 6px;
+  margin-top: 4px;
+  margin-bottom: 2px;
   padding-left: 23px;
 
   font-size: 18px;
@@ -166,6 +180,17 @@
 
   background-color: @gray;
   border: none;
+}
+
+.contacts__email-input:hover {
+  background-color: #e5e5e5;
+}
+
+.contacts__email-input:active,
+.contacts__email-input:focus {
+  background-color: #ffffff;
+  outline: 4px solid #e5e5e5;
+  outline-offset: -4px;
 }
 
 @media (min-width: @tablet-width) {
